syntax = "proto3";

package broker;

service Broker {
    rpc SayHello (stream HelloRequest) returns (stream HelloReply) {}
    rpc RegisterNode (RegisterNodeRequest) returns (RegisterNodeReply) {}
    // rpc SayHi (HelloRequest) returns (HelloReply) {}
}

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    // rpc SayHi (HelloRequest) returns (HelloReply) {}
}


message HelloRequest {
  int32 clientId = 1;
}

message HelloReply {
  string message = 1;
  string nodeName = 2;
}

message RegisterNodeRequest {
    int32 nodeId = 1;
    string host = 2;
    string port = 3;
}

message RegisterNodeReply {
    string message = 1;
}